; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_img-mdc-dma.c_pistachio_mdc_disable_chan.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_img-mdc-dma.c_pistachio_mdc_disable_chan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdc_chan = type { i32, %struct.mdc_dma* }
%struct.mdc_dma = type { i32 }

@PISTACHIO_CR_PERIPH_DMA_ROUTE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mdc_chan*)* @pistachio_mdc_disable_chan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pistachio_mdc_disable_chan(%struct.mdc_chan* %0) #0 {
  %2 = alloca %struct.mdc_chan*, align 8
  %3 = alloca %struct.mdc_dma*, align 8
  store %struct.mdc_chan* %0, %struct.mdc_chan** %2, align 8
  %4 = load %struct.mdc_chan*, %struct.mdc_chan** %2, align 8
  %5 = getelementptr inbounds %struct.mdc_chan, %struct.mdc_chan* %4, i32 0, i32 1
  %6 = load %struct.mdc_dma*, %struct.mdc_dma** %5, align 8
  store %struct.mdc_dma* %6, %struct.mdc_dma** %3, align 8
  %7 = load %struct.mdc_dma*, %struct.mdc_dma** %3, align 8
  %8 = getelementptr inbounds %struct.mdc_dma, %struct.mdc_dma* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mdc_chan*, %struct.mdc_chan** %2, align 8
  %11 = getelementptr inbounds %struct.mdc_chan, %struct.mdc_chan* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @PISTACHIO_CR_PERIPH_DMA_ROUTE(i32 %12)
  %14 = load i32, i32* @PISTACHIO_CR_PERIPH_DMA_ROUTE_MASK, align 4
  %15 = load %struct.mdc_chan*, %struct.mdc_chan** %2, align 8
  %16 = getelementptr inbounds %struct.mdc_chan, %struct.mdc_chan* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @PISTACHIO_CR_PERIPH_DMA_ROUTE_SHIFT(i32 %17)
  %19 = shl i32 %14, %18
  %20 = call i32 @regmap_update_bits(i32 %9, i32 %13, i32 %19, i32 0)
  ret void
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @PISTACHIO_CR_PERIPH_DMA_ROUTE(i32) #1

declare dso_local i32 @PISTACHIO_CR_PERIPH_DMA_ROUTE_SHIFT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
